--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-sm">
           <h1 class="display-4">browserPGP</h1>
-          <p>A website that makes using PGP simple and secure. All work is done client side, so no private data leaves your computer.<br><br>If you want to be extra secure, download the site files <a href="https://github.com/browserPGP/browserPGP.github.io/archive/master.zip">here</a>, extract them, disable your internet and open index.html.<br><br>- ar0n#1462</p>
+          <p>A website that makes using PGP simple and secure. All work is done client side, so no private data leaves your computer. The JavaScript OpenPGP library used is maintained by <a href="https://protonmail.com/blog/openpgpjs-email-encryption/" target="_blank">ProtonMail</a>.<br><br>If you want to be extra secure, download the site files <a href="https://github.com/browserPGP/browserPGP.github.io/archive/master.zip">here</a>, extract them, disable your internet and open index.html.<br><br>- ar0n#1462</p>
           <div id="worksCheck"></div>
           <noscript><br><div class="alert alert-danger" role="alert">This website requires JavaScript to function, please enable it.</div></noscript>
         </div>
