--- a/gen.html
+++ b/gen.html
@@ -113,12 +113,8 @@
           <div class="form-group">
             <button type="button" onclick="encryptDecryptFunction()" class="btn btn-primary">Generate</button>
           </div>
-          <p>
-            <a class="btn btn-secondary" data-toggle="collapse" href="#collapseExample" role="button">
-              About
-            </a>
-          </p>
-          <div class="collapse" id="collapseExample">
+          
+          <div id="collapseExample">
             <div class="card card-body">
               This tool generates a 4096 bit RSA pair of PGP keys. The private key should be backed up in a secure private way. The public key can be shared publicly. These keys can be used for signing, encrypting, and decrypting texts, e-mails, files and directories.
             </div>
