--- a/gen.html
+++ b/gen.html
@@ -6,7 +6,7 @@
   <meta name="author" content="ar0n#1462">
   <link rel="icon" type='image/png' sizes='256x256' href="/256.png"/>
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="prngCheck.js"></script>
   <script src="favicon.js"></script>
