--- a/compatibility.html
+++ b/compatibility.html
@@ -6,7 +6,7 @@
   <meta name="keywords" content="browserPGP,PGP,OpenPGP,online,browser,javascript,github,live,secure,key generator,key gen,encrypt,decrypt,sign,verify,signature">
   <meta name="author" content="ar0n#1462">
 
-  <link rel="stylesheet" href="bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="favicon.js"></script>
   <script src="sha1.min.js"></script>
