--- a/compatibility.html
+++ b/compatibility.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="favicon.js"></script>
   <script src="sha1.min.js"></script>
+  <script src="jquery.min.js"></script>
   <script src="bootstrap.min.js"></script>
   <style>
   html, body {
