--- a/compatibility.html
+++ b/compatibility.html
@@ -12,6 +12,7 @@
   <script src="sha1.min.js"></script>
   <script src="jquery.min.js"></script>
   <script src="bootstrap.min.js"></script>
+  <script src="popper.min.js"></script>
   <style>
   html, body {
     height: 95%;
