--- a/verify.html
+++ b/verify.html
@@ -12,6 +12,8 @@
   <script src="favicon.js"></script>
   <script src="sha1.min.js"></script>
   <script src="openpgp.min.js"></script>
+  <script src="jquery.min.js"></script>
+  <script src="bootstrap.min.js"></script>
   <script>
   openpgp.initWorker({ path:'openpgp.worker.min.js' }) // set the relative web worker path
 
